Fixed the spacing between elements

--- a/css/_article.css
+++ b/css/_article.css
@@ -1,5 +1,5 @@
 article {
-    padding-bottom: 30px;
+    padding-block-end: 66px;
 }
 
 article > h3 {
