--- a/css/_unorderedlists.css
+++ b/css/_unorderedlists.css
@@ -1,6 +1,7 @@
 article ul {
     list-style-position: inside;
     line-height: 40px;
+    margin-block-end: 0;
 }
 
 #checkmark  li{
